--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^3.4.1
   flutter_riverpod: ^2.0.0-dev.9
   flutter_barcode_scanner: ^2.0.0
+  http: ^0.13.4
+  html: ^0.15.0
 
 
   # The following adds the Cupertino Icons font to your application.
